#20 - Add import functionality
- Update javadocs
- Refactor parameters
